wiki/rohan/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rohan
  namespace: wiki
spec:
  defaultBackend:
    service:
      name: rohan
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - rohan
